# Paulinator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  cmake_install.cmake  main.cpp
lib/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Circle.cpp  Circle.h  Shader.cpp  Shader.h  Shapes.cpp  Triangle.cpp  Triangle.h  basic.vert  main.cpp  notes.cpp
src/Include/: Shader.cpp  Shader.h  Shapes.cpp  Shapes.h
src/Shaders/: basic.frag
